--- a/style.css
+++ b/style.css
@@ -1,1 +1,190 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #fff0db;
+  padding: 10px;
+  text-align: center;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Logo_pokemon {
+  height: 100px;
+}
+
+.Logo_panier {
+  width: 40px;
+  height: 40px;
+  margin-right: 80px;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 40px;
+}
+
+.nav-links li {
+  margin-right: 20px;
+  font-size: 26px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+.cart-counter {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.titrePrincipal {
+  margin-block: 50px;
+  text-align: center;
+}
+
+.titreVedette {
+  text-align: center;
+}
+
+#random-pokemon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+}
+#random-pokemon .pokemon-card {
+  margin-top: 2%;
+  border: 1px solid black;
+  box-shadow: 0px 0px 10px 0px black;
+  background-color: #fff0db;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#random-pokemon .pokemon-card img {
+  width: 250px;
+  height: 250px;
+}
+#random-pokemon .pokemon-card-name {
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 2%;
+}
+#random-pokemon .pokemon-card-price {
+  font-size: 20px;
+}
+#random-pokemon .pokemon-card-button {
+  margin-block: 30px;
+  width: 150px;
+  height: 50px;
+  border: 2px solid black;
+  background-color: #fff0db;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.titrePokemon {
+  text-align: center;
+  margin-block: 50px;
+}
+
+.pokemon-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 50px;
+  padding: 20px;
+}
+.pokemon-list-container {
+  background-color: #fff0db;
+  border-radius: 50px;
+  border: 1px solid #000;
+  box-shadow: 0px 0px 1px 0px black;
+  padding: 10px;
+  text-align: center;
+}
+.pokemon-list-image {
+  width: 150px;
+  height: 150px;
+}
+.pokemon-list-name {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 2%;
+}
+.pokemon-list-price {
+  font-size: 20px;
+}
+.pokemon-list-button {
+  margin-block: 20px;
+  width: 100px;
+  height: 40px;
+  border: 2px solid black;
+  background-color: #fff0db;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  main {
+    grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
+  }
+}
+.evolutionDetail {
+  display: flex;
+  justify-content: center;
+}
+
+.pokemonDetails {
+  width: 40%;
+  background-color: #fff0db;
+  border-radius: 10px;
+  border: 1px solid #000;
+  box-shadow: 0px 0px 1px 0px black;
+  padding: 10px;
+  text-align: center;
+  margin-bottom: 100px;
+}
+.pokemonDetails-name {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 2%;
+}
+.pokemonDetails-image {
+  width: 250px;
+  height: 250px;
+}
+.pokemonDetails-price {
+  font-size: 20px;
+}
+.pokemonDetails-button {
+  margin-block: 30px;
+  width: 150px;
+  height: 50px;
+  border: 2px solid black;
+  background-color: #fff0db;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}/*# sourceMappingURL=style.css.map */
