--- a/style.css
+++ b/style.css
@@ -187,4 +187,64 @@ nav {
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.captured-pokemons {
+  padding-inline: 10%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 50px;
+}
+.captured-pokemons-card {
+  background-color: #fff0db;
+  border-radius: 20px;
+  border: 1px solid #000;
+  box-shadow: 0px 0px 1px 0px black;
+  padding: 10px;
+  text-align: center;
+}
+.captured-pokemons-card .delete-icon {
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+  color: #000;
+  font-size: 18px;
+}
+.captured-pokemons-image {
+  max-width: 100%;
+  height: auto;
+}
+.captured-pokemons-name {
+  font-weight: bold;
+}
+.captured-pokemons-price {
+  color: green;
+}
+
+.total-price {
+  background-color: #fff0db;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #000;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 50px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  color: green;
+}
+@media screen and (max-width: 600px) {
+  .total-price {
+    font-size: 16px;
+    padding: 8px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .total-price {
+    font-size: 18px;
+    padding: 10px;
+  }
 }/*# sourceMappingURL=style.css.map */
