--- a/style.scss
+++ b/style.scss
@@ -4,49 +4,60 @@
     box-sizing: border-box;
 }
 
+li {
+    list-style: none; 
+}
+
 header {
     background-color: #fff0db ;
     padding: 10px;
     text-align: center;
+
+    & nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        & .Logo_pokemon {
+            height: 100px;
+        }
+
+        & .nav-links {
+            display: flex;
+            gap: 40px;
+
+            & li {
+                margin-right: 20px;
+                font-size: 26px;
+            }
+
+            & a {
+                text-decoration: none;
+                color: #333;
+                font-weight: bold;
+                position: relative;
+                transition: all 0.1s ease-in-out;
+            
+                &:hover {
+                    border-bottom: 2px solid #000; 
+                }
+            }
+        }
+        
+        .Logo_panier {
+            width: 40px;
+            height: 40px;
+            margin-right: 80px;
+        }
+
+        .cart-counter {
+            font-size: 20px;
+            font-weight: bold;
+        }
+    }
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
-.Logo_pokemon {
-    height: 100px;
-}
-
-.Logo_panier {
-    width: 40px;
-    height: 40px;
-    margin-right: 80px;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 40px;
-}
-
-.nav-links li {
-    margin-right: 20px;
-    font-size: 26px;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-
-.cart-counter {
-    font-size: 20px;
-    font-weight: bold;
-}
 
 .titrePrincipal {
     margin-block: 50px;
@@ -103,6 +114,12 @@ nav {
             font-size: 20px;
             font-weight: bold;
             cursor: pointer;
+            transition: 0.5s;
+
+            &:hover {
+                background-color: #000;
+                color:#fff0db;
+            }
         }
     }
     
@@ -126,24 +143,24 @@ nav {
         box-shadow: 0px 0px 1px 0px black;
         padding: 10px;
         text-align: center;
-      }
-    
-      &-image {
+    }
+
+    &-image {
         width: 150px;
         height: 150px;
-      }
-    
-      &-name {
+    }
+
+    &-name {
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 2%;
-      }
-    
-      &-price {
+    }
+
+    &-price {
         font-size: 20px;
-      }
-    
-      &-button {
+    }
+
+    &-button {
         margin-block: 20px;
         width: 100px;
         height: 40px;
@@ -153,21 +170,47 @@ nav {
         font-size: 15px;
         font-weight: bold;
         cursor: pointer;
-      }
-  }
-  
-  @media screen and (max-width: 600px) {
-    main {
-      grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
+        transition: 0.5s;
+
+        &:hover {
+            background-color: #000;
+            color:#fff0db;
+        }
     }
-  }
+}
+  
+@media screen and (max-width: 600px) {
+    main {
+        grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
+    }
+}
 
-  .evolutionDetail {
+.animationImage {
+    transition: transform 0.5s ease-in-out;
+}
+
+.animationImage:hover {
+    animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-20px);
+    }
+}
+
+.pokemon-details {
     display: flex;
-    justify-content: center;
-  }
+    justify-content: center;   
+}
 
-  .pokemonDetails {
+.pokemonDetails {
     width: 40%;
     background-color: #fff0db;
     border-radius: 10px;
@@ -176,33 +219,41 @@ nav {
     padding: 10px;
     text-align: center;
     margin-bottom: 100px;
+    font-size: 20px;
 
-    
-        &-name {
-            font-size: 30px;
-            font-weight: bold;
-            margin-bottom: 2%;
-        }
-        &-image {
-            width: 250px;
-            height: 250px;
-        }
-        &-price {
-            font-size: 20px;
-        }
+    &-name {
+        font-size: 30px;
+        font-weight: bold;
+        margin-bottom: 2%;
+    }
 
-        &-button {
-            margin-block: 30px;
-            width: 150px;
-            height: 50px;
-            border: 2px solid black;
-            background-color: #fff0db ;
-            border-radius: 10px;
-            font-size: 20px;
-            font-weight: bold;
-            cursor: pointer;
+    &-image {
+        width: 250px;
+        height: 250px;
+    }
+
+    &-price {
+        font-size: 20px;
+    }
+
+    &-button {
+        margin-block: 30px;
+        width: 150px;
+        height: 50px;
+        border: 2px solid black;
+        background-color: #fff0db ;
+        border-radius: 10px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.5s;
+
+        &:hover {
+            background-color: #000;
+            color:#fff0db;
         }
-  }
+    }
+}
 
 .captured-pokemons {
     padding-inline: 10%;
@@ -222,9 +273,9 @@ nav {
             display: flex;
             justify-content: flex-end;
             cursor: pointer;
-            color: #000; // Couleur de la croix, ici rouge
+            color: #000; 
             font-size: 18px;
-          }
+        }
     }
     
     &-image {
@@ -250,7 +301,7 @@ nav {
     text-align: center;
     font-size: 18px;
     font-weight: bold;
-    margin-top: 50px;
+    margin-block: 50px;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -267,5 +318,126 @@ nav {
     }
   
 }
+
+.move-animation {
+    transition: transform 0.5s ease-in-out; 
+}
+
+.red {
+    color: red;
+}
+
+.brown {
+    color: rgb(97, 63, 25);
+}
+
+.green {
+    color: green;
+}
+
+.blue {
+    color: blue;
+}
   
-  
+#clear-cart-button {
+    display: block;
+    margin-inline: auto; 
+    margin-bottom: 50px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.5s;
+
+    &:hover {
+        background-color: #000;
+        color:#fff0db;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .nav-links li {
+        font-size: 18px;
+    }
+
+    #random-pokemon .pokemon-card img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .pokemon-list-container .pokemon-card-image {
+        width: 100px;
+        height: 100px;
+    }
+
+    .titrePrincipal,
+    .titreVedette,
+    .titrePokemon,
+    .evolutionDetail {
+        margin-block: 20px;
+    }
+
+    .total-price {
+        width: 90%;
+    }
+
+    #clear-cart-button {
+        padding: 8px 16px;
+    }
+}
+
+@media screen and (max-width: 748px) {
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-links li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    #random-pokemon {
+        flex-direction: column;
+
+        .pokemon-card img {
+            width: 150px;
+            height: 150px;
+        }
+    }
+
+    .pokemon-list-container {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+
+    .captured-pokemons {
+        padding-inline: 5%;
+    }
+
+    .total-price {
+        width: 100%;
+    }
+
+    #clear-cart-button {
+        margin-inline: 0;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .nav-links li {
+        font-size: 16px;
+    }
+
+    .total-price {
+        font-size: 16px;
+    }
+
+    #clear-cart-button {
+        font-size: 14px;
+    }
+}
+
